# weatherMail

./: .gitignore  Cargo.toml
data/: example.json
src/: analyse.rs  logic.rs  mailserv.rs  main.rs  models.rs  staticconfig.rs  weather.rs
src/analyse/: dsanal.rs  local.rs
templates/: weatheremail.html.tera
