[package]
name = "weatherMail"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["gzip", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.42"
serde_json = "1.0.145"
lettre = "0.11"
once_cell = "1.19"
